--- a/deploy-dev.yaml
+++ b/deploy-dev.yaml
@@ -989,14 +989,14 @@ paths:
                 error_slug: "FIELD_VALIDATION_ERROR"
                 fields:
                   - "expected str for dictionary value @ data['card_number']" 
-  /loyalty_cards/add_trusted:
+  /loyalty_cards/trusted_add:
     post:
       security:
         - bearerAuth: []
       tags:
         - Loyalty Cards
       summary: Update a Loyalty Card from a Trusted Channel
-      operationId: POST /loyalty_cards/add_trusted
+      operationId: POST /loyalty_cards/trusted_add
       description: "This will add a **PLL** type **Loyalty Card** into a user's wallet. Adding from a Trusted Channel requires only a unique identifier for the loyalty membership to enable **PLL** for those **Loyalty Plans** that support it. <br><br>Calling this endpoint on an existing **Loyalty Card** will return details of the **Loyalty Card** and add it to the user's wallet. <br><br> A Trusted Channel is a client or application that authenticates its own end users before using with the Bink API.
 
           <html>
@@ -1160,14 +1160,14 @@ paths:
             schema:
               $ref: '#/components/schemas/LoyaltyCardAddAndAuthoriseRequest'
         description: "Loyalty Card Registration Request."
-  /loyalty_cards/{loyalty_card_id}/add_trusted:
+  /loyalty_cards/{loyalty_card_id}/trusted_add:
     put:
       security:
         - bearerAuth: []
       tags:
         - Loyalty Cards
       summary: Add a Loyalty Card from a Trusted Channel
-      operationId: PUT /loyalty_cards/add_trusted
+      operationId: PUT /loyalty_cards/trusted_add
       description: "Use this operation from a Trusted Channel to correct a loyalty card that is in an error state.
           <html>
             <body>
