--- a/merchant/midas_internal.yaml
+++ b/merchant/midas_internal.yaml
@@ -1,79 +1,79 @@
-openapi: 3.0.0
+asyncapi: '2.4.0'
 info:
-  version: 1.0.0
-  title: Merchant Transaction API
-  description: 'A REST endpoint for merchants to send their transactions to Bink'
-paths: 
-  /merchant_transactions:
-    post:
-      summary: "Send Merchant transactions to Bink"
-      description: "Payload contains an array of transactions"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MerchantTransactions'
-      responses: 
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/genericresponse400'
-        '400':
-          description: '**Bad request**'
-components:
-  schemas:
-    MerchantTransactions:
-      type: array
-      items:
-        $ref: '#/components/schemas/MerchantTransaction'
-    MerchantTransaction:
-      type: object
-      properties: 
-        transaction_id: 
-          type: string
-          example: 'QTZENTY0DdGOEJCQkU3'
-        transaction_auth_code:
-          type: string
-          example: 188328
-        transaction_card_first_six:
-          type: number
-          example: 454546
-        transaction_card_last_four:
-          type: number
-          example: 6309
-        transaction_amount: 
-          type: number
-          example: 23.99
-        transaction_currency_code:
-          type: string
-          example: GBP
-        merchant_identifier:
-          type: string
-          example: 10209723
-        transaction_description: 
-          type: string
-          example: ''
-        transaction_date: 
-          type: string
-          example: "2022-11-11T13:13:46"
-    genericresponse400:
-      type: object
-      required:
-        - error_message
-        - error_slug
-      properties:
-        error_message:
-          type: string
-          description: 'Error message that could be displayed to a user.'
-          example: 'Invalid JSON'
-        error_slug:
-          type: string
-          description: 'Human-readable identifier that is easy to code against.'
-          example: 'MALFORMED_REQUEST'
+  title: Midas Internal API
+  version: '1.0.0'
+  description: |
+    MIDAS operations via message queue
 
+    ### Check out its awesome features:
+
+    * Join Loyalty Plan
+    * Add or Register a Loyalty Card
+    * Request balance and transaction 
 servers:
-  # Added by API Auto Mocking Plugin
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/Bink_API/MerchantTransaction/1.0.0
+  staging:
+    url: guest:guest@rabbitmq:5672
+    protocol: amqp
+    description: staging broker
+    security:
+      - saslScram: []
+
+defaultContentType: application/json
+
+channels:
+  loyalty_account.join.application:  
+    description: Message queue for Join requests
+    subscribe:
+      message:
+        $ref: '#/components/messages/JoinRequest'
+components:
+  messages:
+    JoinRequest:
+      name: Join Request
+      title: Join Request 
+      summary: Request to join a particular Loyalty Plan
+      traits:
+        - $ref: '#/components/messageTraits/commonHeaders'
+      payload:
+        $ref: "#/components/schemas/JoinRequestPayload"
+  schemas:
+    JoinRequestPayload:
+      type: object
+      properties:
+        type:
+          type: string
+          description: "The event type identifier, used for event subscriptions and routing"
+        channel:
+          type: string
+          description: "The identifier for the Channel through which the Join application was initiated."
+        transaction_id:
+          type: string
+          description: "An end-to-end tracing identifier for requests through Bink services."
+        bink_user_id:
+          type: string
+          description: "The Bink User ID for user that initiatied this Join application."             
+        request_id:
+          type: string
+          description: "The client’s identifier for the Join application request"
+        loyalty_plan:
+          type: string
+          description: "The Loyalty Plan 'slug' to which the Join application applies"          
+        account_id:
+          type: string
+          description: "An identifier that a Consumer can use to uniquely identify a Loyalty Account within a Loyalty Plan."
+        join_data:
+          type: string
+          description: "The set of data required by the loyalty program in order to successfully process a Join Application."
+  securitySchemes:
+    saslScram:
+      type: scramSha256
+      description: Provide your username and password for SASL/SCRAM authentication
+  messageTraits:
+    commonHeaders:
+      headers:
+        type: object
+        properties:
+          my-app-header:
+            type: integer
+            minimum: 0
+            maximum: 100
