--- a/deploy-sandbox-retail.yaml
+++ b/deploy-sandbox-retail.yaml
@@ -628,20 +628,8 @@ paths:
         
         <h4>Trusted Channel</h4>
         A Bink supported channel that trusts the partner has completed full verification of the user and no additional validation is required from Bink. 
-        The <b>PLL</b> type <b>Loyalty Card</b> will be added using a single credential, instead of full authorisation credentials.
+        The <b>PLL</b> type <b>Loyalty Card</b> will be added using a single credential, instead of full authorisation credentials."
 
-        <br><br><b>Channels</b>: <br>
-            <ul>
-              <li><b>com.bink.wallet</b> = Bink App & Web</li>
-              <li><b>com.barclays.bmb</b> = Barclays App </li>
-              <li><b>com.bos.api2</b> = Bank of Scotland App & Web</li>
-              <li><b>com.halifax.api2</b> = Halifax App & Web</li>
-              <li><b>com.lloyds.api2</b> = Lloyds App & Web</li>
-              <li><b>com.squaremeal.web</b> = SquareMeal Web</li>
-            </ul>
-            </body>
-          </html>"
-        
       responses:
         '200':
           description: "**Successful**"
@@ -1269,8 +1257,7 @@ paths:
 
             <br><br><b>NOTE</b>: <br>
             <ul>
-              <li>If the card is a <b>PLL</b> type, success will automatically create <b>PLL</b> links to available <b>Payment Accounts</b>. </li>
-              <li>Some <b>Loyalty Plans</b> might not have any ADD fields, only AUTH fields. You may still use this endpoint to add and authorise <b>Loyalty Cards</b> of this type.</li>
+              <li><b>PLL</b> links will automatically be created to available Payment Accounts. </li>
             </ul>
             </body>
           </html>"
@@ -4520,7 +4507,15 @@ components:
           slug:
             type: string
             example: "com.barclays.bmb"
-            description: "Human readible identifier for the channel."
+            description: "Human readible identifier for the channel.
+              <ul>
+                <li><b>com.bink.wallet</b> = Bink App & Web</li>
+                <li><b>com.barclays.bmb</b> = Barclays App </li>
+                <li><b>com.bos.api2</b> = Bank of Scotland App & Web</li>
+                <li><b>com.halifax.api2</b> = Halifax App & Web</li>
+                <li><b>com.lloyds.api2</b> = Lloyds App & Web</li>
+                <li><b>com.squaremeal.web</b> = SquareMeal Web</li>
+              </ul>"
           description:
             type: string
             example: "This Loyalty Card is linked to a Payment Card in the Barclays Mobile Banking channel."
