added bpl endpoint in nginx

--- a/config/default.conf.template
+++ b/config/default.conf.template
@@ -9,7 +9,7 @@ server {
 
     location /bpl {
         root    /usr/share/nginx/html;
-        index   bpl.html
+        index   /bpl/index.html;
     }
 
     location /healthz {
