--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,24 +3,43 @@ name: ci
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  release:
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-    name: create_release
+  tests:
+    name: tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "::set-output name=date::$(date +'%FT%H%M%SZ')"
-        id: date
-      - uses: docker/login-action@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - run: pip install ruff isort black
+      - run: ruff check .
+      - run: black --line-length=120 --check .
+      - run: isort --check --line-length 120 --profile black .
+  release:
+    if: github.event_name == 'push'
+    name: create_release
+    runs-on: ubuntu-latest
+    needs: [tests]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - run: echo "container_tag=$(date +'%FT%H%M%SZ')" >> $GITHUB_ENV
+      - uses: docker/login-action@v2
         with:
           registry: binkcore.azurecr.io
           username: binkcore
           password: ${{ secrets.ACR_BINKCORE_PASSWORD }}
-      - uses: docker/build-push-action@v2
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/build-push-action@v4
         with:
           push: true
+          platforms: linux/amd64, linux/arm64
           tags: |
-            binkcore.azurecr.io/api2-redoc:${{ steps.date.outputs.date }}
-            binkcore.azurecr.io/api2-redoc:latest
+            binkcore.azurecr.io/docs:${{ env.container_tag }}
+            binkcore.azurecr.io/docs:latest
